--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #heading {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #002b80;
+    font-weight: bolder;
+    background-color: #193366; 
     border-color: #cccccc;
     color: white; 
     margin-top: 0;
@@ -10,3 +11,32 @@
     padding-bottom:2.5em;
     font-weight: bold;
 }
+
+#searchParametersPane, #topArticlesPane {
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 20px;
+}
+
+#footing {
+    height: 25px;
+    background: #b1b1b1
+}
+
+#searchButton {
+    background-color: white;
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+#clearButton{
+    background-color: white;
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
