--- a/style.css
+++ b/style.css
@@ -31,7 +31,12 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-  }
+}
+
+.article {
+    border: solid 1px #b1b1b1;
+}
+
 #clearButton{
     background-color: white;
     border: none;
